# foreman-cc

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  README.md  beringei_setup  bootstrap  config.h.in  configure  configure.ac  configure_centos  configure_linux  configure_macosx  configure_ubuntu  foreman-cc.spec  format  setup_centos  setup_folly  setup_macosx  setup_ubuntu
.github/workflows/: make.yml
debian/: README.source  changelog  control  copyright  debhelper-build-stamp  files  rules
doc/: building_and_testing.md  coding_guideline.md  installation.md  overview.md
include/: Makefile.am  Makefile.am.build  Makefile.in
include/beringei/: BitUtil.h  TimeSeriesStream-inl.h  TimeSeriesStream-inl.h.patch  TimeSeriesStream.h  TimeSeriesStream.h.patch
include/foreman/: Client.h  Const.h  Const.h.gen  DataPoint.h  Foreman.h  MemStore.h  Metric.h  Platform.h  Query.h  ResultSet.h  SQLiteStore.h  Store.h  TimeSeries.h  TimeSeriesMap.h  Util.h  constants.csv  foreman-c.h
include/foreman/action/: Engine.h  Manager.h  Method.h  Parameter.h  Script.h  action-c.h
include/foreman/action/impl/: Default.h  EngineImpl.h  GlobalObject.h  Lua.h  ManagerImpl.h  Python.h  ScriptImpl.h  System.h
include/foreman/common/: Error.h  Errors.h  Errors.h.build  Errors.h.gen  common-c.h
include/foreman/log/: Level.h  Log.h  Logger.h  Outputter.h  logger-c.h
include/foreman/metric/: DataPoint.h  MemStore.h  Metric.h  Metrics.h  Query.h  ResultSet.h  Store.h  TimeSeries.h  TimeSeriesMap.h  metric-c.h
include/foreman/metric/impl/: ArrayTimeSeries.h  BeringeiStore.h  BeringeiTimeSeries.h  EmptyStore.h  GraphiteStore.h  MatrixStore.h  MemStore.h  RingMapStore.h  SQLiteStore.h  StoreImpl.h  TimeSeries.h  TimeSeriesImpl.h  TimeSeriesMapStore.h
include/foreman/net/: Graphite.h  HttpClient.h  Socket.h
include/foreman/register/: Object.h  Store.h  register-c.h
include/foreman/register/impl/: MemStore.h  ObjectMap.h  StoreImpl.h
include/foreman/registry/: Object.h  Property.h  Query.h  Store.h  registry-c.h
include/foreman/registry/impl/: SQLStore.h  StoreImpl.h
include/foreman/util/: Mutex.h  UUID.h  Util.h
lib/: Makefile.am  Makefile.in
lib/unix/: Makefile.am  Makefile.am.build  Makefile.in
src/beringei/: BitUtil.cpp  BitUtil.cpp.patch  TimeSeriesStream.cpp  TimeSeriesStream.cpp.patch
src/foreman/: ArrayTimeSeries.cpp  BeringeiTimeSeries.cpp  Client.cpp  DataPoint.cpp  DataPoints.cpp  DataPointsMap.cpp  GraphiteStore.cpp  Manager.cpp  MatrixStore.cpp  MatrixTimeSeries.cpp  MemStore.cpp  Metric.cpp  MetricMap.cpp  NarrowTableStore.cpp  Query.cpp  ResultSet.cpp  RingArrayTimeSeries.cpp  RingMapStore.cpp  SQLiteStore.cpp  StaticArrayTimeSeries.cpp  Store.cpp  TSmapStore.cpp  TimeSeries.cpp  TimeSeriesMap.cpp  TimeSeriesMapStore.cpp  Util.cpp  WideTableStore.cpp
src/foreman/action/: DefaultManager.cpp  Manager.cpp  Method.cpp  MethodMap.cpp  Parameter.cpp  Parameters.cpp  Script.cpp  ScriptEngine.cpp  ScriptEngineMap.cpp  ScriptManager.cpp  ScriptMap.cpp
src/foreman/clang/: datapoint_c.cpp  datapoints_c.cpp  metric_c.cpp  query_c.cpp  resultset_c.cpp  store_c.cpp  store_c_factory.cpp
src/foreman/common/: Error.cpp
src/foreman/log/: FileOutputter.cpp  Logger.cpp  Outputter.cpp  OutputterList.cpp  StdoutOutputter.cpp
src/foreman/metric/: ArrayTimeSeries.cpp  BeringeiTimeSeries.cpp  Data.cpp  DataMap.cpp  DataPoint.cpp  DataPoints.cpp  DataPointsMap.cpp  GraphiteStore.cpp  MatrixStore.cpp  MemStore.cpp  Metric.cpp  MetricMap.cpp  Metrics.cpp  MetricsArray.cpp  MetricsMap.cpp  NarrowTableStore.cpp  Query.cpp  ResultSet.cpp  RingArrayTimeSeries.cpp  RingMapStore.cpp  SQLiteStore.cpp  StaticArrayTimeSeries.cpp  Store.cpp  TSmapStore.cpp  TimeSeries.cpp  TimeSeriesMap.cpp  TimeSeriesMapStore.cpp
src/foreman/net/: Graphite.cpp  HttpClient.cpp  Socket.cpp
src/foreman/register/: Object.cpp  Store.cpp
src/foreman/registry/: Object.cpp  Objects.cpp  Properties.cpp  Property.cpp  Query.cpp  Store.cpp
src/foreman/util/: Log.cpp  Log.h  Mutex.cpp  UUID.cpp  Util.cpp
test/: ClientTest.cpp  DataPointTests.cpp  ForemanTest.cpp  ForemanTest.h  Makefile.in  MemStoreTestController.cpp  MemStoreTestController.h  MemStoreTests.cpp  MetricsTests.cpp  QueryTest.cpp  StoreTestController.cpp  StoreTests.cpp  TimeSeriesTests.cpp
test/action/: LuaEngineTest.cpp  ManagerTest.cpp  ManagerTestController.cpp  ManagerTestController.h  MethodTest.cpp  ParameterTest.cpp  PythonEngineTest.cpp  ScriptManagerTestController.cpp  ScriptManagerTestController.h  ScriptText.cpp  SystemEngineTest.cpp  UnknownEngineTest.cpp
test/clang/: ClangErrorTests.cpp  ClangMetricsTests.cpp  ClangQueryTests.cpp  ClangResultSetTests.cpp  ClangStoreTest.cpp  MetricsClangTests.cpp  QueryClangTests.cpp
test/clang/action/: ClangMethodTest.cpp  ClangParameterTest.cpp
test/clang/metric/: ClangMetricsTest.cpp  ClangMetricsTests.cpp  ClangQueryTest.cpp  ClangQueryTests.cpp  ClangResultSetTest.cpp  ClangResultSetTests.cpp  ClangStoreTest.cpp
test/clang/registry/: ClangObjectTest.cpp  ClangPropertyTest.cpp  ClangQueryTest.cpp  (+1 more)
test/common/: ErrorTest.cpp
test/log/: LoggerTest.cpp  LoggerTestController.cpp  LoggerTestController.h
test/metric/: DataPointTest.cpp  DataPointTests.cpp  MemStoreTestController.h  MetricTest.cpp  MetricsTest.cpp  MetricsTests.cpp  QueryTest.cpp  StoreTest.cpp  StoreTestConfig.h  StoreTestController.cpp  StoreTestController.h  StoreTests.cpp  TimeSeriesTest.cpp  TimeSeriesTests.cpp
test/register/: ObjectTest.cpp  StoreTest.cpp  StoreTestController.cpp  StoreTestController.h
test/registry/: ObjectTest.cpp  PropertyTest.cpp  QueryTest.cpp  StoreTest.cpp  StoreTestController.cpp  StoreTestController.h
test/unix/: .valgrindrc  Makefile.am  Makefile.am.build  Makefile.in
test/util/: MutexTest.cpp  UUIDTest.cpp
tests/: ForemanTest.cpp  ForemanTest.h  MemStoreTestController.cpp  MemStoreTestController.h  MemStoreTests.cpp  MetricsTests.cpp  SQLIteStoreTests.cpp  TimeSeriesTests.cpp
tests/unix/: Makefile.am  Makefile.am.build
util/: prep.sh
util/graphite/: graphite_run
(+85 files in other folders)
