##################################################################
#
# Foreman for C++
#
# Copyright (C) Satoshi Konno 2017
#
# This is licensed under BSD-style license, see file COPYING.
#
##################################################################

SUBDIRS = include lib bin

if FOREMAN_ENABLE_TESTS
SUBDIRS += tests
endif