##################################################################
#
# Foreman for C++
#
# Copyright (C) 2017 Satoshi Konno
#
# This is licensed under BSD-style license, see file COPYING.
#
##################################################################

SUBDIRS = include lib bin

if FOREMAN_ENABLE_TESTS
SUBDIRS += test
endif