##################################################################
#
# Foreman for C++
#
# Copyright (C) 2017 Satoshi Konno
#
# This is licensed under BSD-style license, see file COPYING.
#
##################################################################

foremancc_header = \
	./foreman/Const.h \
	./foreman/Foreman.h \
	./foreman/foreman-c.h \
	./foreman/register/Object.h \
	./foreman/register/Store.h \
	./foreman/register/impl/ObjectMap.h \
	./foreman/register/impl/StoreImpl.h \
	./foreman/register/impl/MemStore.h \
	./foreman/register/register-c.h \
	./foreman/common/common-c.h \
	./foreman/common/Error.h \
	./foreman/common/Errors.h \
	./foreman/util/UUID.h \
	./foreman/util/Util.h \
	./foreman/util/Mutex.h \
	./foreman/action/Parameter.h \
	./foreman/action/impl/Python.h \
	./foreman/action/impl/EngineImpl.h \
	./foreman/action/impl/Lua.h \
	./foreman/action/impl/GlobalObject.h \
	./foreman/action/Engine.h \
	./foreman/action/Method.h \
	./foreman/action/Manager.h \
	./foreman/action/action-c.h \
	./foreman/net/Graphite.h \
	./foreman/net/HttpClient.h \
	./foreman/Platform.h \
	./foreman/metric/Metric.h \
	./foreman/metric/Store.h \
	./foreman/metric/Query.h \
	./foreman/metric/impl/BeringeiStore.h \
	./foreman/metric/impl/SQLiteStore.h \
	./foreman/metric/impl/GraphiteStore.h \
	./foreman/metric/impl/StoreImpl.h \
	./foreman/metric/impl/RingMapStore.h \
	./foreman/metric/impl/MatrixStore.h \
	./foreman/metric/impl/TimeSeriesMapStore.h \
	./foreman/metric/impl/MemStore.h \
	./foreman/metric/impl/ArrayTimeSeries.h \
	./foreman/metric/impl/TimeSeries.h \
	./foreman/metric/metric-c.h \
	./foreman/metric/ResultSet.h \
	./foreman/metric/Metrics.h \
	./foreman/metric/DataPoint.h \
	./foreman/registry/Object.h \
	./foreman/registry/Store.h \
	./foreman/registry/Query.h \
	./foreman/registry/Property.h \
	./foreman/registry/impl/StoreImpl.h \
	./foreman/registry/impl/SQLStore.h \
	./foreman/registry/registry-c.h

nobase_include_HEADERS = \
	$(foremancc_header)
