##################################################################
#
# Foreman for C++
#
# Copyright (C) 2017 Satoshi Konno
#
# This is licensed under BSD-style license, see file COPYING.
#
##################################################################

foremancc_header = \
	./foreman/Foreman.h \
	./foreman/action/Method.h \
	./foreman/action/Parameter.h \
	./foreman/action/action-c.h \
	./foreman/action/impl/GlobalObject.h \
	./foreman/action/impl/Lua.h \
	./foreman/action/impl/EngineImpl.h \
	./foreman/action/impl/System.h \
	./foreman/action/impl/Python.h \
	./foreman/action/Engine.h \
	./foreman/action/Manager.h \
	./foreman/common/Error.h \
	./foreman/common/common-c.h \
	./foreman/common/Errors.h \
	./foreman/foreman-c.h \
	./foreman/metric/DataPoint.h \
	./foreman/metric/Metrics.h \
	./foreman/metric/Query.h \
	./foreman/metric/ResultSet.h \
	./foreman/metric/impl/ArrayTimeSeries.h \
	./foreman/metric/impl/GraphiteStore.h \
	./foreman/metric/impl/TimeSeries.h \
	./foreman/metric/impl/TimeSeriesMapStore.h \
	./foreman/metric/impl/BeringeiStore.h \
	./foreman/metric/impl/EmptyStore.h \
	./foreman/metric/impl/RingMapStore.h \
	./foreman/metric/impl/StoreImpl.h \
	./foreman/metric/impl/SQLiteStore.h \
	./foreman/metric/Metric.h \
	./foreman/metric/Store.h \
	./foreman/metric/metric-c.h \
	./foreman/net/Graphite.h \
	./foreman/net/HttpClient.h \
	./foreman/register/Object.h \
	./foreman/register/Store.h \
	./foreman/register/impl/MemStore.h \
	./foreman/register/impl/ObjectMap.h \
	./foreman/register/impl/StoreImpl.h \
	./foreman/register/register-c.h \
	./foreman/registry/Object.h \
	./foreman/registry/Property.h \
	./foreman/registry/Query.h \
	./foreman/registry/Store.h \
	./foreman/registry/impl/SQLStore.h \
	./foreman/registry/impl/StoreImpl.h \
	./foreman/registry/registry-c.h \
	./foreman/util/Mutex.h \
	./foreman/util/UUID.h \
	./foreman/util/Util.h \
	./foreman/Platform.h \
	./foreman/Const.h

nobase_include_HEADERS = \
	$(foremancc_header)
